# sym2obj

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
examples/multifile/: compileme.sh  f.c  main.c
examples/simple_example/: a.c  runme.sh
examples/singlefile/: compileme.sh  f.c
include/sym2obj/: arg_list.h  preload.h  process.h
src/: CMakeLists.txt  libsym2obj.cc  libsym2obj.h  sym2obj.py
src/internal/: compiler_parser.h
src/lib/: CMakeLists.txt  arg_list.cc  process.cc
test/: CMakeLists.txt  arg_list_test.cc  preload_test.cc  preload_tests.cc  process_test.cc
